# Clasificacion_de_-aspirantes_para_la_docencia_nivel_secundario

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: Descripción del dataset.ipynb
