[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "clasificaci\u00f3n_de_aspirantes_inscriptos_para_ejercer_la_docencia_en_el_nivel_secundario"
version = "0.0.1"
description = "El proyecto consiste en optimizar la asignaci\u00f3n y clasificaci\u00f3n de aspirantes inscriptos para ejercer la docencia en el nivel secundario en la educaci\u00f3n secundaria mediante el an\u00e1lisis de datos"
authors = [
  { name = "Demari Monica" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["clasificación_de_aspirantes_inscriptos_para_ejercer_la_docencia_en_el_nivel_secundario"]
force_sort_within_sections = true
